// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLocationReducer() - maintains address bar pathname state and current + previous matched location-aware actions 1`] = `
Object {
  "hasSSR": undefined,
  "history": Object {
    "entries": Array [
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": undefined,
      },
      Object {
        "hash": "",
        "key": "345678",
        "pathname": "/second/bar",
        "search": "",
        "state": undefined,
      },
    ],
    "index": 1,
    "length": 2,
  },
  "kind": "load",
  "pathname": "/second/bar",
  "payload": Object {
    "param": "bar",
  },
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
  },
  "type": "SECOND",
}
`;

exports[`getInitialState() returns state.history === undefined when using createBrowserHistory 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": undefined,
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "FIRST": "/first",
  },
  "type": "FIRST",
}
`;
